--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
 h1 {
     color:hotpink;
     font-weight: bold;
+    position: relative;
   }
 table {
     margin-left: auto;
@@ -23,6 +24,7 @@ nav {
     float: left; 
     width: 100%;  
     position: relative;
+    text-align: center;
 }
 nav ul {
     list-style-type: none;
@@ -47,5 +49,5 @@ nav ul li a{
 }
 nav ul li a:hover {
     background-color: mistyrose;
-    text-decoration: underline overline;
+    text-decoration: bold;
 }
