--- a/css/style.css
+++ b/css/style.css
@@ -24,15 +24,16 @@ nav {
     float: left; 
     width: 100%;  
     position: relative;
-    text-align: center;
 }
 nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     position: relative;
+    left: 50%;
     float: left;
     display: block;
+    text-align: center;
 }
 nav ul li{
     float: left;
@@ -40,11 +41,11 @@ nav ul li{
 nav ul li a{
     float: left; 
     position: relative;
+    right: 50%;
     display: block;
     padding: 10px 20px;
     color: #fff;
     text-decoration: none;
-    text-align: center;
 }
 nav ul li a:hover {
     background-color: mistyrose;
