--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,10 @@ h3 {
   }
 #main-navbar {
     background-color: magenta;
-    float: left; 
-    width: 100%;  
-    position: relative;
+    overflow:hidden;
+}
+#navbar-container{
+    text-align: center;
 }
 #main-navbar ul {
     list-style-type: none;
@@ -30,8 +31,6 @@ h3 {
     padding: 0;
     position: relative;
     display: inline-block;
-    text-align: center;
-    overflow:hidden;
 }
 #main-navbar ul li{
     float: left;
@@ -45,4 +44,5 @@ h3 {
 }
 #main-navbar ul li a:hover {
     background-color: mistyrose;
+    text-emphasis: bold;
 }
