--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body {
 h1 {
     color:hotpink;
     font-weight: bold;
-    position: absolute;
+    position: relative;
     text-align:left;
     font-size: 32px;
   }
