--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ h1 {
     font-weight: bold;
     position: relative;
     text-align:left;
-    font-size: 100px;
+    font-size: 2.5em;
   }
 h3 {
     color:hotpink;
