--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ h1 {
     position: relative;
     text-align:left;
     font-size: 40px;
+    padding-bottom: 20px;
   }
 h3 {
     color:hotpink;
