--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ h1 {
   font-size: 40px;
   padding-bottom: 10px;
   }
-h2{
+#subtitle{
   color: hotpink;
   font-size:30px;
   padding-bottom: 20px;
