--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body {
   font-size: 40px;
   padding-bottom: 10px;
   }
-#subtitle{
+#contact{
   color: hotpink;
   font-size:30px;
   padding-bottom: 20px;
