--- a/css/style.css
+++ b/css/style.css
@@ -33,16 +33,16 @@ body {
   }
 #name {
   color:hotpink;
-  font-weight: bold;
-  position: relative;
+  font-weight: bolder;
   text-align:left;
   font-size: 40px;
   padding-bottom: 10px;
   }
 #contact{
   color: hotpink;
-  font-size: 10px;
+  font-size: 15px;
   font-style: italic;
+  font-weight: bold;
   padding-bottom: 20px;
 }
 h3 {
