--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@
 body {
   background-color: mistyrose;
   font-family: 'Times New Roman', Times, serif;
+  text-align:center;
   }
 #name {
   color:hotpink;
@@ -39,6 +40,7 @@ body {
   }
 #contact{
   color: hotpink;
+  text-align: left;
   font-size: 15px;
   font-style: italic;
   font-weight: bold;
@@ -49,6 +51,4 @@ h3 {
   font-style:italic;
   font-weight:lighter;
   }
-#name{
-  text-align: center;
-}
+
