--- a/css/style.css
+++ b/css/style.css
@@ -31,14 +31,14 @@ body {
   font-family: 'Times New Roman', Times, serif;
   text-align:center;
   }
-#name {
+h1 {
   color:hotpink;
   font-weight: bolder;
   text-align:left;
   font-size: 40px;
   padding-bottom: 0%;
   }
-#contact{
+#contact {
   color: hotpink;
   text-align: left;
   font-size: 15px;
