--- a/css/style.css
+++ b/css/style.css
@@ -41,10 +41,11 @@ body {
 h2 {
   color:rgb(250, 46, 148);
   font-size: 35px;
+  padding: 10%;
 }
 h4 {
   color:hotpink;
-  font-size: 1.15em;
+  font-size: 1.2em;
 }
 
 #contact {
