--- a/css/style.css
+++ b/css/style.css
@@ -60,9 +60,12 @@ h4 {
 }
 #institution {
   font-weight:lighter;
-  padding-bottom:10px;
+  padding-bottom: 5px;
 }
 #major{
   font-weight:bold;
-  padding:5%;
+  padding:7%;
+}
+#achievement{
+  list-style-type: none;
 }
