--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ h4 {
 #institution {
   font-weight:lighter;
   padding-bottom: 2px;
-  padding-top:5px;
+  padding-top:0.5em;
 }
 #major{
   font-weight:bold;
