--- a/css/style.css
+++ b/css/style.css
@@ -49,9 +49,7 @@ h4 {
   color:rgb(237, 25, 131);
   font-size: 1.2em;
 }
-
 #contact {
-  color: hotpink;
   text-align: left;
   font-size: 15px;
   font-style: italic;
@@ -75,4 +73,11 @@ h4 {
   font-style:italic;
   font-weight:lighter;
   font-size:small;
+}
+#portfolio {
+  text-align: left;
+  font-size: 15px;
+  font-weight: bold;
+  padding-top: 0%;
+  padding-bottom: 20px;
 }
