--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,13 @@ h4 {
   padding-top: 0%;
   padding-bottom: 20px;
 }
-#class{
+#dance{
   max-width: 100%;
   max-height: 75%;
+}
+#bw{
+  max-width: 200px;
+  max-height: 200px;
+  position:fixed;
+  float: right;
 }
