--- a/css/style.css
+++ b/css/style.css
@@ -55,11 +55,11 @@ h4 {
   font-style: italic;
   font-weight: bold;
   padding-top: 0%;
-  padding-bottom: 20px;
+  padding-bottom: 20%;
 }
 #institution {
   font-weight:lighter;
-  padding-bottom: 2px;
+  padding-bottom: 2%;
   padding-top:0.5em;
 }
 #major{
@@ -79,7 +79,7 @@ h4 {
   font-size: 25px;
   font-weight: bold;
   padding-top: 0%;
-  padding-bottom: 20px;
+  padding-bottom: 2%;
   font-style: italic;
 }
 #class{
