--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,9 @@ h2 {
 h4 {
   color:rgb(237, 25, 131);
   font-size: 1.2em;
+  font-weight:lighter;
+  padding-bottom: 2%;
+  padding-top:0.5em;
 }
 #contact {
   text-align: left;
@@ -58,22 +61,8 @@ h4 {
   padding-top: 0%;
   padding-bottom: 20%;
 }
-#institution {
-  font-weight:lighter;
-  padding-bottom: 2%;
-  padding-top:0.5em;
-}
-#major{
-  font-weight:bold;
-  padding:2%;
-}
-#achievement{
+ul{
   list-style-type: none;
-}
-#year{
-  font-style:italic;
-  font-weight:lighter;
-  font-size:small;
 }
 #portfolio {
   text-align: left;
