--- a/css/style.css
+++ b/css/style.css
@@ -29,14 +29,14 @@
 body {
   background-color: mistyrose;
   font-family: 'Times New Roman', Times, serif;
-  text-align:center;
+  float:center;
   color:hotpink;
 }
 #name {
   font-family: 'silkscreen';
   color:hotpink;
   font-weight: bolder;
-  text-align:left;
+  float:left;
   font-size: 60px;
   padding-bottom: 0%;
 }
@@ -54,7 +54,7 @@ h4 {
   padding-top:0.5em;
 }
 #contact {
-  text-align: left;
+  float: left;
   font-size: 15px;
   font-style: italic;
   font-weight: bold;
@@ -65,7 +65,7 @@ ul{
   list-style-type: none;
 }
 #portfolio {
-  text-align: left;
+  float: left;
   font-size: 25px;
   font-weight: bold;
   padding-top: 0%;
