--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ body {
   background-color: mistyrose;
   font-family: 'Times New Roman', Times, serif;
   float:center;
+  text-align: center;
   color:hotpink;
 }
 #name {
