--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,8 @@ body {
   float:center;
   text-align: center;
   color:hotpink;
+  padding-left: 2%;
+  padding-right: 2%;
 }
 #name {
   font-family: 'silkscreen';
@@ -44,6 +46,7 @@ body {
 h2 {
   color:rgb(255, 64, 159);
   float: center;
+  text-align: center;
   font-size: 35px;
   padding: 3%;
   padding: .75em;
