--- a/css/style.css
+++ b/css/style.css
@@ -48,8 +48,8 @@ h2 {
   float: center;
   text-align: center;
   font-size: 35px;
-  padding: 3%;
-  padding: .75em;
+  padding-top: 3%;
+  padding-bottom: .75em;
 }
 h4 {
   color:rgb(237, 25, 131);
@@ -64,7 +64,7 @@ h4 {
   font-size: 15px;
   font-style: italic;
   font-weight: bold;
-  padding-top: 10%;
+  padding-top: 5%;
   padding-bottom: 20%;
 }
 ul{
