--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ h4 {
 #contact {
   text-align: left;
   float: left;
+  position: relative;
   font-size: 15px;
   font-style: italic;
   font-weight: bold;
