--- a/css/style.css
+++ b/css/style.css
@@ -39,14 +39,13 @@ body {
   color:hotpink;
   font-weight: bolder;
   text-align:left;
-  position: absolute;
+  position: sticky;
   font-size: 60px;
-  padding-bottom: 50%;
+  padding-bottom: 2%;
 }
 h2 {
   color:rgb(255, 64, 159);
-  float: center;
-  text-align: center;
+  float: none;
   font-size: 35px;
   padding-top: 3%;
   padding-bottom: .75em;
@@ -59,7 +58,6 @@ h4 {
   padding-top:0.5em;
 }
 #contact {
-  text-align: left;
   position: relative;
   font-size: 15px;
   font-style: italic;
