--- a/css/style.css
+++ b/css/style.css
@@ -63,8 +63,8 @@ h4 {
   font-size: 15px;
   font-style: italic;
   font-weight: bold;
-  padding-top: 2%;
   padding-bottom: 3%;
+  padding-right: 100%;
 }
 ul{
   list-style-type: none;
