--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,6 @@ body {
   text-align:left;
   position: sticky;
   font-size: 60px;
-  padding-bottom: 2%;
 }
 h2 {
   color:rgb(255, 64, 159);
@@ -58,12 +57,12 @@ h4 {
   padding-top:0.5em;
 }
 #contact {
-  float: left;
-  font-size: 15px;
+  position: sticky;
+  text-align: left;
+  font-size: 20px;
   font-style: italic;
   font-weight: bold;
-  padding-bottom: 3%;
-  padding-right: 100%;
+  padding-bottom: 2%;
 }
 ul{
   list-style-type: none;
