--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ body {
   text-align: center;
   color:rgb(246, 41, 144);
   padding: 2%;
+  margin: 25px 50px 75px 100px;
 }
 #name {
   font-family: 'silkscreen';
