--- a/css/style.css
+++ b/css/style.css
@@ -92,3 +92,9 @@ ul{
   max-width: 20em;
   max-height: 20em;
 }
+#map{
+  position: sticky;
+  width: 100%;
+  height: 100%;
+  border: rebeccapurple 10px;
+}
