--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ ul{
   max-height: 20em;
 }
 #map{
-  position: sticky;
+  position: absolute;
   width: 100%;
   height: 100%;
   border: rebeccapurple 10px;
