--- a/css/style.css
+++ b/css/style.css
@@ -97,9 +97,11 @@ ul{
   width: 100%;
   height: 100%;
 }
-@media screen {
-  
-}
-@media screen {
-  
+@media screen and (min-width: 500px) {
+  #box{
+    border: 5px purple;
+    background-color: aliceblue;
+    text-align:center;
+    padding:0%;
+  }
 }
