--- a/css/style.css
+++ b/css/style.css
@@ -97,11 +97,15 @@ ul{
   width: 100%;
   height: 100%;
 }
-@media screen and (min-width: 500px) {
+@media screen and (min-width:500px) {
   #box{
-    border: 25px purple;
     background-color: aliceblue;
     text-align:center;
     padding:0%;
+  }
+}
+@media screen and (min-width:500px) {
+  #map{
+    border:5px black;
   }
 }
