--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,8 @@ ul{
     background-color: aliceblue;
     text-align:center;
     padding:0%;
-    border-right:5px black;
+    margin:auto auto auto auto;
+    border:5px black;
   }
 }
 @media screen and (min-width:500px) {
