--- a/css/style.css
+++ b/css/style.css
@@ -22,10 +22,6 @@
   color: rgb(255, 252, 254);
   text-decoration: none;
 }
-#main-navbar ul li a:hover {
-  background-color: mistyrose;
-  color: rgb(246, 41, 144);
-}
 body {
   background-color: mistyrose;
   font-family: 'Times New Roman', Times, serif;
@@ -96,18 +92,25 @@ ul{
   position: absolute;
   width: 100%;
   height: 100%;
+  padding-right: 20%;
 }
 @media screen and (min-width:500px) {
   #box{
     background-color: aliceblue;
-    text-align:center;
     padding:0%;
     margin:auto auto auto auto;
     border:5px double black;
   }
+  #main-navbar ul li a:hover {
+    background-color: mistyrose;
+    color: rgb(246, 41, 144);
+  }
+  #body{
+    text-align: left;
+  }
 }
 @media screen and (min-width:500px) {
   #map{
-    border:5px black;
+    border:5px solid black;
   }
 }
