--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,6 @@ ul{
   position: absolute;
   width: 100%;
   height: 100%;
-  padding-right: 20%;
 }
 @media screen and (min-width:500px) {
   #box{
@@ -102,12 +101,13 @@ ul{
     border:5px double black;
   }
   #main-navbar ul li a:hover {
-    background-color: mistyrose;
+    background-color: white;
     color:black;
   }
 }
 @media screen and (min-width:500px) {
   #map{
     border:5px solid black;
+
   }
 }
