--- a/css/style.css
+++ b/css/style.css
@@ -90,14 +90,13 @@ ul{
 }
 #map{
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 50%;
+  height: 50%;
 }
 @media screen and (min-width:500px) {
   #box{
     background-color: aliceblue;
     padding:0%;
-    margin:auto auto auto 10%;
     border:5px double black;
   }
   #main-navbar ul li a:hover {
@@ -108,6 +107,13 @@ ul{
 @media screen and (min-width:500px) {
   #map{
     border:5px solid black;
-
+    float: inline-start;
+    margin:auto auto auto auto;
+    width: 75%;
+    height:75%;
+  }
+  #store{
+    font-weight: bolder;
+    font-size:20px;
   }
 }
